NBNV-701 - Added stuff to the api.properties to make statistics work correctly

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -38,3 +38,5 @@ email_host = smtp.nerc-lancaster.ac.uk
 email_port = 25
 email_from = NBNGateway@nbn.org.uk
 email_mode = dev
+
+species_dictionary_updated = 3rd April 2013
