--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -1,6 +1,8 @@
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+#javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
+#api.url=https://data.nbn.org.uk/api
 api.url=https://staging-data.nbn.org.uk/api
 #api.url=http://localhost:8084/api
 api.user=nbnsysadmin
