Importer polling service now moves files to temp for processing.

--- a/config/importerService/NBNImporterPollingService/App.config
+++ b/config/importerService/NBNImporterPollingService/App.config
@@ -5,7 +5,7 @@
     </startup>
     <appSettings>
       <add key="ImporterCommandLine" value="C:\Working\servicetest\importer\importer.jar %importfile% -logdir %logfolder% -tempdir %tempfolder% -target ingest"/>
-      <add key="SourceFolder" value="C:\Working\servicetest\updatefiles"/>
+      <add key="SourceFolder" value="C:\Working\servicetest\sourcefiles"/>
       <add key="ImporterLogFolder" value="C:\Working\servicetest\log"/>
       <add key="ResultFolder" value="C:\Working\servicetest\complete"/>
       <add key="TempFolder" value="C:\Working\servicetest\temp"/>
