Check the size of a polygon via the Warehouse tables, use a geography type to get the size in m2

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -39,4 +39,8 @@ email_port = 25
 email_from = NBNGateway@nbn.org.uk
 email_mode = dev
 
+# Species dictionary was last updated on this date
 species_dictionary_updated = 3rd April 2013
+
+# Maximum allowed polygon size
+max_polygon = 900000000
