#nbnv-857 - started implementing csv parsing using super csv

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>jersey-bundle</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
