Added second level of max polygon size to the API, if the user supplies a taxon / dataset filter they can get a max 700 square kilometer request, if not they are restricted to a 100 square kilometer request

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -43,4 +43,7 @@ email_mode = dev
 species_dictionary_updated = 3rd April 2013
 
 # Maximum allowed polygon size
-max_polygon = 900000000
+# 100km^2
+max_polygon_no_filter = 1000000000
+# 700 km^2
+max_polygon_with_filter = 490000000000
