--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -1,9 +1,9 @@
 # The following properties file defines the some constants which are required
 # in order to power some of the maps defined in this gis project
-mapserver = http://localhost/fcgi-bin/mapserv.exe
-api = http://localhost:8084/api
-spatialConnection = Server=nbn-b.nerc-lancaster.ac.uk;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
-contextLayersLocation = E:
+mapserver = http://localhost:9000/cgi-bin/mapserv
+api = https://data.nbn.org.uk/api
+spatialConnection = MSSQL:driver=FreeTDS;dsn=nbnwarehouse;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
+contextLayersLocation = /vagrant/vector
 
 # The following property locates the root of the NBN Gateway Portal which links
 # from the acknowledgement pages are based from.
