Put a version in for SASS dependency to prevent compass grabbing the latest version which is no longer compatible with our current version

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -40,6 +40,12 @@
             <type>gem</type>
         </dependency>
         <dependency>
+            <groupId>rubygems</groupId>
+            <artifactId>sass</artifactId>
+            <version>3.2.15</version>
+            <type>gem</type>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
