Issue with Apache Winsock2 API not working correctly on the servers, produces;
[warn] (OS 64)The specified network name is no longer available.  : winnt_accept: Asynchronous AcceptEx failed.

Linked to issue with AcceptEx not working correctly so disabling Winsock2 and falling back onto older code as per; http://httpd.apache.org/docs/2.2/mod/mpm_winnt.html

--- a/config/apache/defaults.conf
+++ b/config/apache/defaults.conf
@@ -29,3 +29,6 @@ ServerAdmin admin@nbn.org.uk
 # Set up logs/error.log as the default log file
 LogLevel warn
 ErrorLog "logs/error.log"
+
+# Disable MPM winnt - Use accept() rather than AcceptEx() to accept network connections
+Win32DisableAcceptEx
