Rolling up to using the snapshot of dynamo maps, this has the bread cache stuff in
Creating two instances of bakers, one for taxon data and one for context layers

Defining a dummy Climate instance, always returns 1 as good climate

--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>uk.ac.ceh</groupId>
             <artifactId>dynamo-mapping</artifactId>
-            <version>0.6</version>
+            <version>0.7-SNAPSHOT</version>
         </dependency>
         
         <!-- Hibernate Validator -->
