--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -4,6 +4,17 @@ mapserver = http://localhost:9000/cgi-bin/mapserv
 api = https://data.nbn.org.uk/api
 spatialConnection = MSSQL:driver=FreeTDS;dsn=nbnwarehouse;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
 contextLayersLocation = /vagrant/vector
+ogr2ogrCommand = ogr2ogr
+ogr2ogrProcessLimit = 50
+
+# Define the defaults for the bread bakers
+bread.taxon.cacheDir = /maps/taxonCache
+bread.taxon.staleTime = 30000
+bread.taxon.rottenTime = 86400000
+
+bread.context.cacheDir = /maps/contextCache
+bread.context.staleTime = 43200000
+bread.context.rottenTime = 604800000
 
 # The following property locates the root of the NBN Gateway Portal which links
 # from the acknowledgement pages are based from.
