NBNV-957 download squares filtered by verifications added, plus fixed bad query performance simply through use of outer joins to force much better query plan

--- a/api/src/main/resources/log4j.properties
+++ b/api/src/main/resources/log4j.properties
@@ -18,3 +18,5 @@ log4j.appender.stdout.layout.ConversionPattern= %5p %d{yyyy-MM-dd HH:mm:ss.SSS} 
 
 #log4j.appender.R.layout=org.apache.log4j.PatternLayout
 #log4j.appender.R.layout.ConversionPattern=%p %d{HH:mm:ss.SSS} [%t] %c - %m%n
+
+#log4j.logger.uk.org.nbn.nbnv.api.dao.warehouse=DEBUG
