Using bread for all feature layers

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -4,8 +4,8 @@ mapserver = http://localhost:9000/cgi-bin/mapserv
 api = https://data.nbn.org.uk/api
 spatialConnection = MSSQL:driver=FreeTDS;dsn=nbnwarehouse;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
 contextLayersLocation = /vagrant/vector
-ogr2ogrCommand = ogr2ogr
-ogr2ogrProcessLimit = 50
+ogr2ogr.location= ogr2ogr
+ogr2ogr.limit = 50
 
 # Define the defaults for the bread bakers
 bread.taxon.cacheDir = /maps/taxonCache
