Renamed the bakery to shapefile bakery, using a changable climate Hard coding a limit of 512 bread slices into the gis.properties

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -11,6 +11,7 @@ ogr2ogr.limit = 50
 bread.taxon.cacheDir = /maps/taxonCache
 bread.taxon.staleTime = 30000
 bread.taxon.rottenTime = 86400000
+bread.taxon.maxSliceCount = 512
 
 bread.context.cacheDir = /maps/contextCache
 bread.context.staleTime = 43200000
