Disabled the win32disableaccept command Added a 1000 limit to threadperchild

--- a/config/apache/defaults.conf
+++ b/config/apache/defaults.conf
@@ -31,4 +31,6 @@ LogLevel warn
 ErrorLog "logs/error.log"
 
 # Disable MPM winnt - Use accept() rather than AcceptEx() to accept network connections
-Win32DisableAcceptEx
+#Win32DisableAcceptEx
+ThreadsPerChild       1000
+MaxRequestsPerChild    0
