--- a/api-poker/src/main/resources/poker.properties
+++ b/api-poker/src/main/resources/poker.properties
@@ -11,6 +11,7 @@ sso_token_domain =
 
 username = username
 password = password
-
 # Define location of NBN Gateway Portal
 api_url = http://localhost:8084/api
+# Define endpoint to hit
+url = /user/userAccesses/revokeExpired,/organisation/organisationAccesses/revokeExpired
