Using http client for jersey and mapserver

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -7,6 +7,10 @@ contextLayersLocation = /vagrant/vector
 ogr2ogr.location= ogr2ogr
 ogr2ogr.limit = 50
 
+# Define the defaults for the http client (for mapserver and rest api)
+httpclient.maxConnections = 100
+httpclient.maxPerRoute = 20
+
 # Define the defaults for the bread bakers
 bread.taxon.cacheDir = /maps/taxonCache
 bread.taxon.staleTime = 300000
