Moving to the next version of dynamo maps, this one generates shapefile qix files for quicker rendering in mapserver

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -6,6 +6,7 @@ spatialConnection = MSSQL:driver=FreeTDS;dsn=nbnwarehouse;Database=NBNWarehouse;
 contextLayersLocation = /vagrant/vector
 ogr2ogr.location= ogr2ogr
 ogr2ogr.limit = 50
+shptree.location= shptree
 
 # Define the defaults for the http client (for mapserver and rest api)
 httpclient.maxConnections = 100
