Hiding the server details

--- a/config/apache/defaults.conf
+++ b/config/apache/defaults.conf
@@ -7,6 +7,9 @@ ServerRoot "D:/Apache2.2"
 DocumentRoot "D:/Apache2.2/htdocs"
 ServerAdmin admin@nbn.org.uk
 
+ServerTokens ProductOnly
+ServerSignature Off
+
 <Directory />
     Options FollowSymLinks
     AllowOverride None
