Start of refactoring of S1 importer to use a library of functions rather than have it all internally so they can be shared more easily with the new online validator

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
         <module>recordcleaner</module>
         <module>reseter.datasetAccess</module>
         <module>api-poker</module>
-    </modules>
+        <module>importer.s1.utils</module>
+  </modules>
 	
     <build>
         <pluginManagement>
