--- a/importer.gui/pom.xml
+++ b/importer.gui/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.4.1.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -32,7 +37,11 @@
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
