--- a/importer.gui/pom.xml
+++ b/importer.gui/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.1.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.FINAL</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
