--- a/importer.gui/pom.xml
+++ b/importer.gui/pom.xml
@@ -1,6 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>uk.org.nbn</groupId>
+        <artifactId>nbnv</artifactId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
+
     <groupId>uk.org.nbn</groupId>
     <artifactId>nbnv-importer-gui</artifactId>
     <version>000001</version>
@@ -25,11 +31,7 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.1.2</version>
         </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.1.0.FINAL</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -85,9 +87,16 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
     </dependencies>
 
     <build>
+    <!-- To define the plugin version in your parent POM -->
+
         <finalName>${name}##${version}</finalName>
         <plugins>
             <plugin>
@@ -101,8 +110,30 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <includes>
-                        <include>**/*Tests.java</include>
+                        <include>**/*Test.java</include>
                     </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.searls</groupId>
+                <artifactId>jasmine-maven-plugin</artifactId>
+                <version>1.3.1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jsSrcDir>${basedir}/src/main/js</jsSrcDir>
+                    <sourceIncludes>
+                        <include>myCode.js</include>
+                    </sourceIncludes>
+                    <jsTestSrcDir>${basedir}src/test/js/specs</jsTestSrcDir>
+                    <specIncludes>
+                        <include>mySpec.js</include>
+                    </specIncludes>
                 </configuration>
             </plugin>
         </plugins>
