--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.10</version>
                 </plugin>
+                <plugin>
+                    <groupId>com.github.searls</groupId>
+                    <artifactId>jasmine-maven-plugin</artifactId>
+                    <version>1.3.1.5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
