Added configurable security on the login cookies (cookie was only sent on secure connections since last fix) so that we can develop locally without fiddling with the code constantly

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -44,6 +44,9 @@ email_port = 25
 email_from = NBNGateway@nbn.org.uk
 email_mode = dev
 
+# Send the cookie only on secure connections
+secure_cookie = false
+
 # Species dictionary was last updated on this date
 species_dictionary_updated = 3rd April 2013
 
