--- a/importer.spatial.ui/src/main/resources/settings.properties
+++ b/importer.spatial.ui/src/main/resources/settings.properties
@@ -1,4 +1,4 @@
-javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
