Adding a maven distribution block to the main pom

--- a/pom.xml
+++ b/pom.xml
@@ -135,4 +135,16 @@
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <distributionManagement>
+        <repository>
+            <id>ceh-releases-nexus</id>
+            <url>http://nexus.nerc-lancaster.ac.uk/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <uniqueVersion>true</uniqueVersion>
+            <id>ceh-snapshots-nexus</id>
+            <url>http://nexus.nerc-lancaster.ac.uk/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
