refactored the new project back into original importer.ui, will delete importer.gui

--- a/importer.ui/src/main/webapp/WEB-INF/web.xml
+++ b/importer.ui/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
         <session-timeout>
             30
         </session-timeout>
+        <tracking-mode>COOKIE</tracking-mode>
     </session-config>
 
     <display-name>NBN V Importer UI</display-name>
