--- a/importer.gui/pom.xml
+++ b/importer.gui/pom.xml
@@ -7,9 +7,7 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>uk.org.nbn</groupId>
     <artifactId>nbnv-importer-gui</artifactId>
-    <version>000001</version>
     <packaging>war</packaging>
 
     <name>${project.artifactId}</name>
@@ -37,7 +35,6 @@
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -69,19 +66,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
@@ -91,6 +75,22 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
+        </dependency>
+
+        <!-- nbn specific -->
+        <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-importer-s1-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-importer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
         </dependency>
     </dependencies>
 
