--- a/importer.ui/src/main/resources/importer.ui.properties
+++ b/importer.ui/src/main/resources/importer.ui.properties
@@ -1,3 +1,14 @@
 database_url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 database_user=NBNImporter
 database_password=Ecowaswashere9
+
+# Add admin email address for sending task failures to
+admin_email = data.services@jncc.gov.uk
+sysadmin_name = nbnsysadmin
+silent_revoke = true
+
+# Define the emailer properties
+email_host = smtp.nerc-lancaster.ac.uk
+email_port = 25
+email_from = NBNGateway@nbn.org.uk
+email_mode = dev
