--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -25,6 +25,12 @@
             <version>1.3.2</version>
         </dependency>
         
+        <dependency>
+            <groupId>uk.me.jstott</groupId>
+            <artifactId>jcoord</artifactId>
+            <version>1.1-b</version>
+        </dependency>
+        
         <!--NBN Gateway API-->
         <!-- Get the properties reader -->
         <dependency>
@@ -143,7 +149,7 @@
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>0.28.6</version>
+                <version>1.0.3</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
