--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -133,6 +133,13 @@
             <artifactId>reflections</artifactId>
             <version>0.9.8</version>
         </dependency>
+        <!-- Tuples -->
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>          
     </dependencies>
     <build>
         <plugins>
