--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -3,8 +3,10 @@
 # application. These can be server specifically overwritten by creating a file
 # in the folder /server/overload/ with the same file name
 #api = http://staging.testnbn.net/api
-api = http://localhost:8084/api
-gis = http://localhost:8084/gis
+#api = http://localhost:8084/api
+#gis = http://localhost:8084/gis
+api = https://data.nbn.org.uk/api
+gis = https://gis.nbn.org.uk
 
 gaProp = UA-1444605-6
 gauProp = UA-1444605-5
