--- a/importer.ui/src/main/resources/importer.ui.properties
+++ b/importer.ui/src/main/resources/importer.ui.properties
@@ -12,3 +12,9 @@ email_host = smtp.nerc-lancaster.ac.uk
 email_port = 25
 email_from = NBNGateway@nbn.org.uk
 email_mode = dev
+
+api = https://data.nbn.org.uk/api
+
+# Define the defaults for the http client (for mapserver and rest api)
+httpclient.maxConnections = 100
+httpclient.maxPerRoute = 20
