Skeleton of service of online validation via the API

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -301,6 +301,13 @@
             <artifactId>javatuples</artifactId>
             <version>1.2</version>
             <scope>compile</scope>
-        </dependency>     
+        </dependency>   
+        
+        <!-- Online Validator -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-importer-s1-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>  
     </dependencies>
 </project>
