The file upload should now work correctly

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -153,6 +153,12 @@
             <artifactId>commons-codec</artifactId>
             <version>1.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+
  
         <!-- Jersey + Spring -->
         <dependency>
