--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,9 @@
         <error-code>500</error-code>
         <location>/unavailable-pages/500</location>
     </error-page>
+    
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/clientaccesspolicy.xml</url-pattern>
+    </servlet-mapping>
 </web-app>
