--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -11,4 +11,4 @@ gis = http://localhost:8084/gis
 gaProp = UA-1444605-6
 gauProp = UA-1444605-5
 
-welcomeText = This is NBN Gateway V
+welcomeText = /nbnv-settings/motd
