--- a/importer-daemon/pom.xml
+++ b/importer-daemon/pom.xml
@@ -42,6 +42,31 @@
             <artifactId>commons-daemon</artifactId>
             <version>1.0.15</version>
         </dependency>
-        
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+<!--        <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-importer</artifactId>
+            <version>${project.version}</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+          
     </dependencies>
 </project>
