--- a/importer-daemon/src/main/resources/importer_daemon.properties
+++ b/importer-daemon/src/main/resources/importer_daemon.properties
@@ -1,5 +1,17 @@
-validatorRoot = C:\\validatorRoot
+# Root of directory containing jobs (queue / tmp)
+validatorRoot = /validatorRoot/
 
+# NBN Demonstration Organisation, may be any as long as it exists
+defaultOrganisationID = 189
+# Sysadmin User ID, could be any ID as long as it exists
+defaultUserID = 15848
+
+# Time to wait before checking for new inputs (Default 30 minutes)
+sleepTime = 1800000
+
+importer = /importerRoot/importer.jar
+
+# Database for importer S1 to grab from
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
