Copying out the api logic which deals with reseting access request

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
         <module>reseter.datasetAccess</module>
         <module>api-poker</module>
         <module>importer.s1.utils</module>
-  </modules>
+        <module>nbnv-reseter</module>
+    </modules>
 	
     <build>
         <pluginManagement>
