--- a/nbnv-reseter/pom.xml
+++ b/nbnv-reseter/pom.xml
@@ -22,12 +22,7 @@
         <!--NBN Gateway API-->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nbnv-api-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>nbnv-api-dao</artifactId>
+            <artifactId>nbnv-api-crud</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--NBN Gateway Properties Reader-->
