--- a/importer/src/test/resources/importer.properties
+++ b/importer/src/test/resources/importer.properties
@@ -6,3 +6,5 @@ javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
 my.test.setting=don't-delete-this
+
+resetter.path=./NBN_AccessResetter.jar
