Added Mail Sender dependency, also tied in the validator directly with the importer

--- a/importer-daemon/src/main/resources/importer_daemon.properties
+++ b/importer-daemon/src/main/resources/importer_daemon.properties
@@ -1,5 +1,5 @@
 # Root of directory containing jobs (queue / tmp)
-validatorRoot = /validatorRoot/
+outputRoot = /validatorRoot
 
 # NBN Demonstration Organisation, may be any as long as it exists
 defaultOrganisationID = 189
@@ -9,7 +9,8 @@ defaultUserID = 15848
 # Time to wait before checking for new inputs (Default 30 minutes)
 sleepTime = 1800000
 
-importer = /importerRoot/importer.jar
+importer.target = validate
+importer.log.level = DEBUG
 
 # Database for importer S1 to grab from
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
