--- a/gis/src/main/webapp/WEB-INF/web.xml
+++ b/gis/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,9 @@
         <servlet-name>default</servlet-name>
         <url-pattern>/clientaccesspolicy.xml</url-pattern>
     </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/crossdomain.xml</url-pattern>
+    </servlet-mapping>        
 </web-app>
