Have an operational coreless running feature that swaps out the core datasource with a placeholder that only throws errors after it has been set up, have the api grabbing mybatis level errors in an exception mapper, not ideal but so far the prettiest way to deal with this issue, also can prevent horrible sql stack traces showing up.

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -55,3 +55,5 @@ species_dictionary_updated = 3rd April 2013
 max_polygon_no_filter = 1000000000
 # 700 km^2
 max_polygon_with_filter = 490000000000
+
+coreless = false
