--- a/importer.spatial.ui/pom.xml
+++ b/importer.spatial.ui/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<!-- nbn rs library -->
+    <!-- nbn rs library -->
 
     <parent>
         <groupId>uk.org.nbn</groupId>
@@ -44,6 +44,16 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-importer-s1-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-properties</artifactId>
+            <version>${project.version}</version>
+        </dependency>        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
