--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -40,8 +40,8 @@
         <url-pattern>/favicon.ico</url-pattern>
     </servlet-mapping>      
     
-    <servlet-mapping>
+<!--    <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>/robots.txt</url-pattern>
-    </servlet-mapping>  
+    </servlet-mapping>  -->
 </web-app>
