Changes to the Importer Daemon, thread runs as part of a scheduled executor now so timing works correctly (i.e. does its job and goes to sleep for X minutes, 30 at the moment) haven't tested the tear down yet however, suspect there might be some problems there still.
Fixed the problem with the importer doing very odd things with the log files (mutliple attached appenders, need to clear them off each time so have set up an injector with a definable logger managed by the thread itself.

Removed some fluff from the app-config.xml file, need to figure out fixing the TemplateMailer still however

--- a/importer-daemon/src/main/resources/importer_daemon.properties
+++ b/importer-daemon/src/main/resources/importer_daemon.properties
@@ -6,8 +6,8 @@ defaultOrganisationID = 189
 # Sysadmin User ID, could be any ID as long as it exists
 defaultUserID = 15848
 
-# Time to wait before checking for new inputs (Default 30 minutes)
-sleepTime = 1800000
+# Time to wait before checking for new inputs in minutes (Default 30 minutes)
+sleepTime = 30
 
 importer.target = validate
 importer.log.level = DEBUG
@@ -16,3 +16,9 @@ importer.log.level = DEBUG
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
+
+# Define the emailer properties
+email_host = smtp.nerc-lancaster.ac.uk
+email_port = 25
+email_from = NBNGateway@nbn.org.uk
+email_mode = dev
