--- a/importer-daemon/pom.xml
+++ b/importer-daemon/pom.xml
@@ -21,7 +21,7 @@
         <!--NBN Gateway API-->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nbnv-api-model</artifactId>
+            <artifactId>nbnv-api-crud</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--NBN Gateway Properties Reader-->
@@ -69,4 +69,47 @@
 
           
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/spring.handlers</resource>
+                        </transformer>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/spring.schemas</resource>
+                        </transformer>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <manifestEntries>
+                                <Main-Class>uk.org.nbn.nbnv.importer.daemon.DaemonLauncher</Main-Class>
+                            </manifestEntries>
+                        </transformer>                        
+                    </transformers>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>                    
+                </configuration>                
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>            
+        </plugins>
+    </build>
 </project>
