--- a/importer-daemon/src/main/resources/importer_daemon.properties
+++ b/importer-daemon/src/main/resources/importer_daemon.properties
@@ -22,3 +22,5 @@ email_host = smtp.nerc-lancaster.ac.uk
 email_port = 25
 email_from = NBNGateway@nbn.org.uk
 email_mode = dev
+
+logDirectory = /validatorRoot/logs
