NBNV-1030 Working with cjohn and jcoop to get an importer resource defined in the importer which will upload files to a directory

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -55,3 +55,7 @@ species_dictionary_updated = 3rd April 2013
 max_polygon_no_filter = 1000000000
 # 700 km^2
 max_polygon_with_filter = 490000000000
+
+# Define the location which the api will use for storing imports. 
+# An importer daemon should be running and using this path
+importer_location = /importer
