Basic work done, figuring out the tests now, features are imported without spatial calculation and then runs a sproc at the end

--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -1,5 +1,5 @@
 
-javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 #javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
