Enabling timestamp to be read as a java date object Moved the portal template to be loaded by a controller (not using powerless) Added some basic styling Correcting the dependency on the api-crud library in the portal pom.xml

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -134,7 +134,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nbnv-api-model</artifactId>
+            <artifactId>nbnv-api-crud</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
