--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -59,3 +59,8 @@ max_polygon_with_filter = 490000000000
 # Define the location which the api will use for storing imports. 
 # An importer daemon should be running and using this path
 importer_location = /importer
+
+# Define the location of where metadata forms can be stored for use as 
+# placeholder taxon datasets, before they get loaded into the database as 'real'
+# taxon datasets
+taxondataset_metadata_forms = /importer/metadata-forms
